# Program_Youtube_Downloader

./: .flake8  .gitignore  AGENTS.md  AGENTS_FR.md  README.md  downloader.py  main.py  pyproject.toml  requirements.txt  youtube_downloader.py
.github/workflows/: ci.yml
docs/: README.md  api_reference.md  architecture.md  changelog.md  contributing.md  docs_overview.md  index.md  overview-fr.md  overview_fr.md  project-overview.md
docs/guides/: contributing.md  custom-cli-class.md  custom-progress-handler.md  download-video-guide.md  tutorial-download-video.md
docs/reference/: api-reference.md  architecture.md  tests-overview.md
docs/releases/: changelog.md
program_youtube_downloader/: __init__.py  cli.py  cli_utils.py  config.py  constants.py  downloader.py  exceptions.py  legacy_utils.py  main.py  progress.py  types.py  utils.py  validators.py  youtube_downloader.py
scripts/: setup_env.sh
tests/: test_additional.py  test_callbacks.py  test_cli_parse.py  test_cli_utils.py  test_config.py  test_coverage_more.py  test_custom_progress.py  test_install_launch.py  test_logging_setup.py  test_menu_handlers.py  test_menu_integration.py  test_parallel_downloads.py  test_validators.py  test_youtube_downloader.py  tests_overview.md
